# share-dinkum

./: .gitignore  README.md  devserver.py  migrate.bat  pyproject.toml  runback.bat  runtests.bat
docs/: 2027_capital_gains_tax_changes_are_really_complex.md  capital_gains_changes_plan.md  data_model.md
share_dinkum_proj/: .env.sample  data_import.ipynb  manage.py  runback.bat  runtests.bat
share_dinkum_proj/share_dinkum_app/: admin.py  apps.py  constants.py  decorators.py  excelinterface.py  loading.py  middleware.py  models.py  reports.py  signals.py  tests.py  utils.py  uuid_future.py  yfinanceinterface.py
share_dinkum_proj/share_dinkum_app/export_data/: 2025-08-14_Export_Sample_Data_Portfolio.xlsx  2025-08-30_Export_Sample_Data_Portfolio.xlsx
share_dinkum_proj/share_dinkum_app/import_data/: data_import_template_public.xlsx
share_dinkum_proj/share_dinkum_app/migrations/: 0001_initial.py  0002_alter_costbaseadjustment_description_and_more.py  0003_alter_market_options_market_market_keys.py  0004_dataexport_include_price_history.py  0005_costbaseadjustmentallocation_activation_date_and_more.py  0006_parcel_sale_date.py  0007_parcel_calculated_instrument_name.py  0008_rename_calculated_unsold_quantity_parcel_calculated_remaining_quantiy.py  0009_rename_calculated_remaining_quantiy_parcel_calculated_remaining_quantity.py  0010_alter_costbaseadjustmentallocation_cost_base_adjustment.py  0011_alter_logentry_content_type_currentexchangerate.py  (+2 more)
share_dinkum_proj/share_dinkum_proj/: asgi.py  ensure_secret_key.py  settings.py  urls.py  wsgi.py
(+10 files in other folders)
